k8s/3-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-db
spec:
  ports:
    - port: 27017
  selector:
    app: user-service-db
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service-db
spec:
  ports:
    - port: 27017
  selector:
    app: flight-service-db
---
apiVersion: v1
kind: Service
metadata:
  name: flight-reservation-service-db
spec:
  ports:
    - port: 27017
  selector:
    app: flight-reservation-service-db
