k8s/6-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
    - port: 8080
  selector:
    app: user-service
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service
spec:
  ports:
    - port: 8080
  selector:
    app: flight-service
---
apiVersion: v1
kind: Service
metadata:
  name: flight-reservation-service
spec:
  ports:
    - port: 8080
  selector:
    app: flight-reservation-service
